<resources>
    <string name="app_name">A108v2.0beta1</string>
    <string name="action_settings">Settings</string>
    <string name="device_name">设备名称</string>
    <string name="device_mac">设备地址</string>
    <string name="bt_scan">蓝牙设备</string>>
    <string name="btScan">扫描周边蓝牙设备</string>
    <string name="btBond">蓝牙设备已经匹配</string>
    <string name="please_click">请再次点击</string>
    <string name="unpair">确定取消配对吗？</string>
    <string name="sure">确定</string>
    <string name="no">取消</string>
    <string name="func">功能</string>
    <string name="conn_start">连接开始</string>
    <string name="conn_succ">连接成功</string>
    <string name="conn_err">连接失败</string>
    <string name="na">NA</string>
    <string name="version">设备版本：</string>
    <string name="power">电量</string>
    <string name="read_id">读取身份证</string>
    <string name="read_finger">指纹特征码</string>
    <string name="keyPin">密码键盘</string>
    <string name="no_finger">该身份证并未包含指纹信息</string>
    <string name="has_finger">该身份证包含指纹信息</string>
    <string name="finger_scan">扫描指纹获取特征码</string>
    <string name="your_finger">您的指纹特征码如下</string>
    <string name="finger_code">特征码信息</string>
    <string name="work_key">工作密钥</string>
    <string name="main_key">主密钥</string>
    <string name="input_main_key">注入主密钥</string>
    <string name="input_main_succ">注入主密钥成功</string>
    <string name="input_work_key">注入工作密钥</string>
    <string name="input_work_succ">注入工作密钥成功</string>
    <string name="input_key_start">注入密钥开始</string>
    <string name="card_no">卡号</string>
    <string name="amount">金额</string>
    <string name="click_input">点击输入</string>
    <string name="input_timeout">密码输入超时</string>
    <string name="input_cancel">密码输入取消</string>
    <string name="start_input">密码输入</string>
    <string name="maybe_disconnect">也许连接断开</string>
    <string name="please_wait">请稍等</string>
    <string name="bankCard">银行卡</string>
    <string name="readCard">读取银行卡</string>
    <string name="CardType">银行卡类型</string>
    <string name="CardNo">银行卡号</string>
    <string name="CardInfo">银行卡信息</string>
    <string name="checkCard">开始检测卡片</string>
    <string name="readComplete">读取完毕</string>
    <string name="ICC">IC卡</string>
    <string name="PICC">非接卡</string>
    <string name="MSR">磁条卡</string>
    <string name="getLog">读取交易明细</string>
    <string name="arpc">ARPC</string>
    <string name="other">其他功能</string>
    <string name="write_code">写入编号</string>
    <string name="read_code">读取编号</string>
    <string name="read_uniq">读取唯一序列号</string>
    <string name="string_len_err">请输入大于0字节小于16字节的字符串</string>
    <string name="write_succ">写入成功</string>
    <string name="test_psam">测试PSAM卡槽</string>
</resources>
