<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_gravity="center_horizontal">
        <com.rey.material.widget.EditText
            android:id="@+id/code_name_str"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_heightPercent="10%"
            app:layout_widthPercent="50%"
            app:layout_marginTopPercent="5%"
            app:layout_marginLeftPercent="5%"
            android:gravity="center"
            android:hint="@string/write_code"
            android:textSize="14sp" />

        <com.rey.material.widget.Button
            android:id="@+id/write_code_btn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_heightPercent="10%"
            app:layout_widthPercent="35%"
            app:layout_marginTopPercent="5%"
            app:layout_marginRightPercent="5%"
            android:text="@string/write_code"
            android:textColor="@color/white"
            app:rd_enable="true"
            android:background="@drawable/round_button"
            android:layout_alignBaseline="@+id/write_code"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            />

        <TextView
            android:id="@+id/code_text"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_heightPercent="10%"
            app:layout_widthPercent="50%"
            app:layout_marginTopPercent="20%"
            app:layout_marginLeftPercent="5%"
            android:gravity="center"
            android:textSize="14sp" />

        <com.rey.material.widget.Button
            android:id="@+id/read_code_btn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_heightPercent="10%"
            app:layout_widthPercent="35%"
            app:layout_marginTopPercent="20%"
            app:layout_marginRightPercent="5%"
            android:layout_alignBaseline="@+id/work_key_text"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:background="@drawable/round_button"
            android:text="@string/read_code"
            android:textColor="@color/white"
            app:rd_enable="true" />

        <TextView
            android:id="@+id/sn_text"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_heightPercent="10%"
            app:layout_widthPercent="50%"
            app:layout_marginTopPercent="35%"
            app:layout_marginLeftPercent="5%"
            android:gravity="center"
            android:textSize="14sp" />

        <com.rey.material.widget.Button
            android:id="@+id/read_sn_btn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_heightPercent="10%"
            app:layout_widthPercent="35%"
            app:layout_marginTopPercent="35%"
            app:layout_marginRightPercent="5%"
            android:layout_alignBaseline="@+id/work_key_text"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:background="@drawable/round_button"
            android:text="@string/read_uniq"
            android:textColor="@color/white"
            app:rd_enable="true" />
        <com.rey.material.widget.Button
            android:id="@+id/test_psam2_btn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_heightPercent="10%"
            app:layout_widthPercent="35%"
            app:layout_marginTopPercent="50%"
            app:layout_marginRightPercent="5%"
            android:layout_alignBaseline="@+id/work_key_text"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:background="@drawable/round_button"
            android:text="测试PSAM卡槽2"
            android:textColor="@color/white"
            app:rd_enable="true" />
        <com.rey.material.widget.Button
            android:id="@+id/test_psam1_btn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_heightPercent="10%"
            app:layout_widthPercent="35%"
            app:layout_marginTopPercent="50%"
            app:layout_marginLeftPercent="5%"
            android:layout_alignBaseline="@+id/work_key_text"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@drawable/round_button"
            android:text="测试PSAM卡槽1"
            android:textColor="@color/white"
            app:rd_enable="true" />


        <com.rey.material.widget.Button
            android:id="@+id/test_btn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_heightPercent="10%"
            app:layout_widthPercent="35%"
            app:layout_marginTopPercent="65%"
            app:layout_marginLeftPercent="5%"
            android:layout_alignBaseline="@+id/work_key_text"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@drawable/round_button"
            android:text="测试按钮"
            android:textColor="@color/white"
            app:rd_enable="true" />
    </android.support.percent.PercentRelativeLayout>
</LinearLayout>